# QuotePaper

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/input/: mod.rs  parsing.rs  structs.rs
src/painting/: mod.rs
src/source/: basic.rs  mod.rs  random_red_rising.rs  rr.rs
