[package]
name = "quote_paper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.11.0"
cairo-rs = { version = "0.2.0", features = ["png"] }
confy = "*"
serde = { version = "*", features = ["derive"]}
log = "*"
fern = "*"
chrono = "*"
reqwest = { version = "*", features = ["blocking"]}
serde_json = "*"
shellexpand = "*"